syntax = "proto3";

option java_multiple_files = true;
option java_package = "dk.johannes.proto";

message MyClientRequest {
  int32 myRequestId = 1;
  string myRequestMessage = 2;
}

message MyClientResponse {
  int32 myResponseId = 1;
  string myResponseMessage = 2;
}

service MyClientServiceName {
  rpc GetMyResponse(stream MyClientRequest) returns (MyClientResponse);
}